Fix input font and spacing (#46)

--- a/src/css/fonts.css
+++ b/src/css/fonts.css
@@ -1,5 +1,5 @@
 :root {
   --font-primary: normal normal 600 normal 16px/1.5 Poppins, sans-serif;
-  --font-secondary: normal normal 500 normal 16px/1.5 Lato, sans-serif;
+  --font-secondary: normal normal 400 normal 16px/1.5 Lato, sans-serif;
   --font-color: var(--color-moon-900);
 }
